--- a/user-service/build.gradle
+++ b/user-service/build.gradle
@@ -27,7 +27,11 @@ dependencies {
 	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	implementation 'org.springframework.kafka:spring-kafka'
-
+	implementation 'mysql:mysql-connector-java:8.0.33'
+	implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
+	//lombok
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
 }
 
 tasks.named('test') {
