--- a/task-service/src/main/resources/application.properties
+++ b/task-service/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 spring.application.name=task-service
+
+# Database Connection Settings
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/msa_task
+spring.datasource.username=root
+spring.datasource.password=0372
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jackson.deserialization.fail-on-unknown-properties=false
+
+
+server.port=8080
