--- a/task-service/build.gradle
+++ b/task-service/build.gradle
@@ -16,6 +16,9 @@ java {
 repositories {
 	mavenCentral()
 }
+ext {
+	set('springCloudVersion', "2023.0.3")
+}
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
@@ -41,7 +44,17 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
 	implementation 'mysql:mysql-connector-java:8.0.33'
+	//config client
+	implementation 'org.springframework.cloud:spring-cloud-starter-config'
+	// Spring Cloud Starter for Eureka Client
+	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+}
+
+dependencyManagement {
+	imports {
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
 	}
+}
 
 
 tasks.named('test') {
