--- a/Eureka/src/main/resources/application.properties
+++ b/Eureka/src/main/resources/application.properties
@@ -1,5 +1,3 @@
-server.port=8761
-
-
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
+spring.application.name=application
+spring.profiles.active=eureka
+spring.config.import=optional:configserver:http://admin:1234@localhost:9000
