--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-spring.application.name=notification-service
+spring.application.name=application
+spring.profiles.active=notification
+spring.config.import=optional:configserver:http://admin:1234@localhost:9000
