토큰 게이트웨이에서 보관 및 각 교청 헤더에 첨부 로직 추가

--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -9,6 +9,8 @@ spring:
           uri: lb://user-service
           predicates:
             - Path=/api/v1/users/**
+          filters:
+            - name: UserFilter
         - id: msa_task
           uri: lb://task-service
           predicates:
