--- a/user-service/build.gradle
+++ b/user-service/build.gradle
@@ -70,6 +70,12 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-config'
 	// Spring Cloud Starter for Eureka Client
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+
+	// Jackson 의존성
+	implementation 'com.fasterxml.jackson.core:jackson-databind'
+	implementation 'com.fasterxml.jackson.core:jackson-annotations'
+	implementation 'com.fasterxml.jackson.core:jackson-core'
+
 }
 
 dependencyManagement {
