--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '2'
 services:
   zookeeper-1:
     image: confluentinc/cp-zookeeper:latest
@@ -84,4 +83,65 @@ services:
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
 
+#  gateway-service:
+#    build:
+#      context: ./gateway-service
+#      dockerfile: Dockerfile
+#    ports:
+#      - "8080:8080"
+#    depends_on:
+#      - eureka-service
+#
+#  eureka-service:
+#    build:
+#      context: ./Eureka
+#      dockerfile: Dockerfile
+#    ports:
+#      - "8761:8761"
+#    depends_on:
+#      - config-service
+#
+#  config-service:
+#    build:
+#      context: ./config_service
+#      dockerfile: Dockerfile
+#    ports:
+#      - "9000:9000"
+#
+#  user-service:
+#    build:
+#      context: ./user-service
+#      dockerfile: Dockerfile
+#    ports:
+#      - "8081:8081"
+#    depends_on:
+#      - gateway-service
+#
+#  task-service:
+#    build:
+#      context: ./task-service
+#      dockerfile: Dockerfile
+#    ports:
+#      - "8082:8082"
+#    depends_on:
+#      - gateway-service
+#
+#  notification-service:
+#    build:
+#      context: ./notification-service
+#      dockerfile: Dockerfile
+#    ports:
+#      - "8083:8083"
+#    depends_on:
+#      - gateway-service
+
+
+
 # https://devocean.sk.com/blog/techBoardDetail.do?ID=164016
+
+# docker-compose -f docker-compose.yml up -d
+# docker ps
+
+# docker-compose exec kafka-1 kafka-topics --create --topic my-topic --bootstrap-server kafka-1:9092 --replication-factor 3 --partitions 2
+# docker-compose exec kafka-1 kafka-topics --describe --topic my-topic --bootstrap-server kafka-1:9092
+#
